--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img src="images/iphone6.png" class="title-image" alt="iphone-mockup">
+          <img src="/images/iphone6.png" class="title-image" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -94,12 +94,12 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <img class="testimonial-image" src="/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="/images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
 
