--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-image" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-image" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-image" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-image" src="techcrunch.png" alt="tc-logo">
+    <img class="press-image" src="tnw.png" alt="tnw-logo">
+    <img class="press-image" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-image" src="mashable.png" alt="mashable-logo">
 
   </section>
 
